## Client[1.00] - 2016-1-28
### Added
 - Sends version number to server
 - Commands /u /usr /users - print client versions
 - Command window (ctrl-g hotkey) can run commands on "Enter" keypress
### Fix
 - Textbox autofocus on mousewheel events works in Windows too now
 - Context menu threaded destroy worked in Linux only and crashed in Windows. Switched Windows to a different system

## Server[0.99] - 2016-1-28
### Added
 - Dedicated message sender thread (eventThread)
 - Ending characters for messages
 - Accepts version information
 - Client version in user list
### Changed
 - Removed most sleep timers


## Client[0.99c] - 2016-1-27
### Added
 - Downloader target folder path selection
 - Chat message logging in log folder (Toggleable in other options)
 - Command window (ctrl-g hotkey)
 - Cycle through previous messages with "UP" and "DOWN" arrows
 - Light grey background tag, used in every first line of a / command
 - Command /datal - prints data_list
 - Command /clear - clears textbox
 - Corrected right click context menu position
 - All menus can be closed with "Escape" button
 - Background color tags for changelog window
### Changed
 - Separated online users from offline users in User_area
 - /log command no longer prints the data_list, instead it prints a new userlog list that  is clearer and excludes unnecessary information, data_list can still be printed with /datal
 - Commands /u /usr /users format, online and offline users are separated and background color tagged like in User_area. Changed value order for clarity
 - Offline users are no longer light blue, instead they are grey
 - Moved changelog to main folder
### Fix
 - Space was not inserted between time and usernames in chat when name length was not forced to 19chr
 - Average upload and download speed is shown again

## Server[0.98b] - 2016-1-27
### Added
 - List printer thread for s/** commands
### Changed
 - Increased max shared file name length from 61 to 131