@@ -1,3 +1,12 @@
+## Client[1.00b] - 2016-1-29
+### Added
+ - Will now always load and save default values when they can't be found in the settings.cfg file
+
+## Fix[0.99b] - 2016-1-28
+### Fix
+ - Private offline messages get delivered again
+
+
 ## Client[1.00] - 2016-1-28
 ### Added
  - Sends version number to server
